bugs squashed and edits

--- a/css/starter-template.css
+++ b/css/starter-template.css
@@ -22,6 +22,7 @@ P, li {
   background-blend-mode: multiply;
   font-size: 20px;
   font-family: Minion-Pro, serif;
+  text-align: justify;
 
 }
 
